--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.1
 idna==3.10
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+PyYAML==6.0.2
 requests==2.32.3
 setuptools==75.8.2
 tqdm==4.67.1
