--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 argcomplete==3.5.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
+fire==0.7.0
 idna==3.10
 Jinja2==3.1.5
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
+Pygments==2.19.1
 PyYAML==6.0.2
 requests==2.32.3
+rich==13.9.4
 setuptools==75.8.2
+shellingham==1.5.4
+termcolor==2.5.0
 tqdm==4.67.1
+typing_extensions==4.12.2
 urllib3==2.3.0
