ci: remove "Release" prefix from releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,5 +57,5 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ env.TAG_NAME }}
-          name: Release ${{ env.TAG_NAME }}
+          name: ${{ env.TAG_NAME }}
           artifacts: "*.tar.gz"
